# hbw

./: .gitignore  CHANGELOG.md  CITATION.cff  Makefile  README.md  analytic-kde-bw.md  hbw.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  docs.yml  python-publish.yml
benchmarks/: benchmark_speedup.py
docs/: conf.py  index.rst
docs/theory/: analytic-kde-bw.md  analytic-nw-bw.md
examples/: analytic-kde-bw.ipynb  analytic-nw-bw-selector.ipynb
hbw/: __init__.py  _kernels.py  _numba_kde.py  _numba_nw.py  _optim.py  kde.py  nw.py
ms/: Makefile  generate_figures.py  generate_tables.py  paper.bib  paper.tex
src/: derivatives.py  kde_analytic_hessian.py  nw_analytic_hessian.py  optim.py
tests/: conftest.py  test_derivatives.py  test_edge_cases.py  test_kde_evaluate.py  test_multivariate.py  test_newton.py  test_numba.py  test_nw_predict.py  utils.py
