[project]
name = "analytic-bw"
version = "0.1.0"
description = "Analytic-Hessian bandwidth selection for KDE and NW regression"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

# Exclude notebooks from linting (exploratory/experimental code)
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
]
ignore = [
    "E402",  # module-level import not at top (needed for path manipulation in tests)
    "E501",  # line too long (handled by formatter, not linter)
]
