[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hbw"
version = "0.3.1"
description = "Fast kernel bandwidth selection via analytic Hessian Newton optimization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Gaurav Sood", email = "gsood07@gmail.com" }]
keywords = [
    "bandwidth",
    "kernel",
    "kde",
    "nadaraya-watson",
    "cross-validation",
    "nonparametric",
    "density-estimation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.10", "ruff>=0.4"]
docs = ["sphinx>=7.0", "furo", "sphinx-copybutton", "sphinx-autodoc-typehints"]

[project.urls]
Homepage = "https://github.com/finite-sample/hbw"
Documentation = "https://finite-sample.github.io/hbw"
Repository = "https://github.com/finite-sample/hbw"
Issues = "https://github.com/finite-sample/hbw/issues"

[tool.hatch.build.targets.wheel]
packages = ["hbw"]

[tool.hatch.build.targets.sdist]
only-include = ["hbw", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["*.ipynb", "ms/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "W"]
ignore = ["E501", "N806"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "scipy>=1.17.1",
]
